R-Style Softlab Создание сущностей для задания